# socialnetwork-db

./: .gitignore  CREATE TABLE users.sql  LICENSE  README.md  analysis.md  styles.css
app/: .gitignore  CMakeLists.txt  DB.cs  Program.cs  Socialnetwork.Designer.cs  Socialnetwork.cs  db.cs  main.cs  socialnetwork.Designer.cs  socialnetwork.cs  socialnetwork.resx
app/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
explanatory-note/: explanatory-note-pre-gost.docx  explanatory-note.md  styles.css
queries/: auto-id-increment.sql  constraint.sql  create.sql  mysql-create-users.sql
queries/constraint/: friends-users-1.sql  friends-users.sql  users-idclasses.sql
queries/create/: friends.sql  groups.sql  idclasses.sql  inrequests.sql  liked.sql  messages.sql  messagesdocs.sql  notes.sql  notesdocs.sql  outrequests.sql  subs.sql
